--- a/LaplacianTalk/laplacian.tex
+++ b/LaplacianTalk/laplacian.tex
@@ -282,7 +282,7 @@ The codifferential $\delta$ on  a Riemannian manifold $(M,g)$ without boundary s
 \begin{enumerate}
 \item $\delta^2 = 0$ 
 \item For $\omega,\eta \in \Omega^k(M)$, let 
-$$(\omega, \eta) = \int_M \langle \omega, \eta \rangle ~dV_g$$
+$$(\omega, \eta) = \int_M \langle \omega, \eta \rangle ~dV_g = \int_M \omega \wedge \star \eta$$
 Then for $\omega \in \Omega^k(M)$ and $\eta \in \Omega^{k-1}(M)$, we have that 
 $$(\delta \omega, \eta) = (\omega, d\eta) $$
 where $d$ is the exterior derivative. In this way, we see that $\delta$  is the \ib{adjoint} of $d$ with respect to the inner product, justifying the name \ib{codifferential}.
@@ -301,13 +301,10 @@ $$(-1)^p \star d d \star = 0 $$
 Since $d^2 = 0$.
 \item We first verify that $(\cdot, \cdot)$ determines  an inner product. We note that it is symmetric since $\langle  \cdot, \cdot \rangle$ is symmetric, and it is also bilinear since integration is linear and $\langle \cdot, \cdot \rangle$ is as well. All that remains is to show that it is positive definite. We note that it is positive since $\langle \omega, \omega \rangle$ is positive for all $\omega$, so 
 $$\int_M \langle\omega,\omega\rangle dV_g > 0$$
-. In addition, we have that $\langle \omega, \omega \rangle = 0$ if and only if $\omega = 0$, and $\int_M fdV_g = 0$ if and only  if $f = 0$. Therefore, $(\cdot,\cdot)$ is positive definite, so it defines an inner product on $\Omega^k(M)$.
+In addition, we have that $\langle \omega, \omega \rangle = 0$ if and only if $\omega = 0$, and $\int_M fdV_g = 0$ if and only  if $f = 0$. Therefore, $(\cdot,\cdot)$ is positive definite, so it defines an inner product on $\Omega^k(M)$.
 
-We note that by how we've define the $\star$ operator, the inner product is given  by the equivalent definition for $\xi, \alpha \in \Omega^k(M)$
-$$(\xi, \alpha) = \int_M \xi \wedge \star \alpha $$
-Therefore, we wish to  prove the equivalent statement that for $\omega \in \Omega^k(M)$ and $\eta
-\in \Omega^{k-1}(M)$
-$$\int_M  \delta\omega \wedge \star\eta = \int_M \omega \wedge \star d\eta $$
+We then want to show
+$$\int_M \langle \delta\omega,\eta \rangle~dV_g = \int_M \langle\omega,d\eta\rangle~dV_g \iff\int_M  \delta\omega \wedge \star\eta = \int_M \omega \wedge \star d\eta $$
 Then using symmetry of the inner product, this is equivalent to the statement
 $$\int_M \eta \wedge \star\delta\omega = \int_M d\eta \wedge \star\omega $$
 We then compute
@@ -325,7 +322,7 @@ Which gives us that
 $$ (\delta\omega, \eta)= (\omega,d\eta)$$
 \end{enumerate}
 \end{proof}
-Finally,  we have the necessary tools to define the fabled \ib{Laplace-de Rham Operator} (Also known as the  \ib{Laplace-Beltrami Operator}.
+Finally,  we have the necessary tools to define the fabled \ib{Laplace-de Rham Operator} (Also known as the  \ib{Laplace-Beltrami Operator}).
 \begin{defn}
 On a oriented compact Riemannian manifold $(M,g)$, define the \ib{Laplace-de Rham Operator}, denoted $\Delta$, as  the family of maps $\Omega^k(M) \to \Omega^k(M)$ such that 
 $$\Delta = \delta d + d\delta $$
@@ -349,7 +346,6 @@ $$df \wedge \star df = \langle df, df \rangle ~dV_g $$. Noting that $df^\sharp =
 \end{align*}
 Therefore, we conclude that
 $$\star df = (-1)^{i-1}\sqrt{\det g} \left(g^{ij}\frac{\partial f}{\partial x^j} \right)dx^1 \wedge \ldots \hat{dx^i} \wedge \ldots \wedge dx^n $$
-\end{proof}
 We then compute $d\star df$ to be 
 \begin{align*}
 d\star df &= (-1)^{i-1} \frac{\partial}{\partial x^k}\left( g^{ij}\sqrt{\det g}\frac{\partial f}{\partial x^j} \right) dx^k \wedge dx^1 \wedge \ldots \wedge \hat{dx^i} \wedge \ldots \wedge dx^n \\
@@ -364,7 +360,51 @@ We then have that $\star d\star df$ must satsify $d\star f \wedge \star d\star d
 \end{align*}
 Where we use the fact that $\langle dV_g, dV_g \rangle = 1$. Therefore, we conclude that 
 $$\delta df = -\star d\star f = -\frac{1}{\sqrt{\det g}} \frac{\partial}{\partial x^i}\left( g^{ij}\sqrt{\det g}\frac{\partial f}{\partial x^j} \right) $$
-Due to our choice of sign convention, this is unfortunately the negative of the the original Laplacian we had. Some sign conventions define $\Delta f = -\dv(\grad f)$ for this reason.
+\end{proof}
+Due to our choice of sign convention, this is unfortunately the negative of the the original Laplacian we had. Some sign conventions define $\Delta f = -\dv(\grad f)$ for this reason.\\
 
+We make several important observations regarding $\Delta$
+\begin{prop}\enumbreak
+\begin{enumerate}
+\item $\Delta$ commutes with $\star$, i.e. for $\omega \in \Omega^k(M)$, we have $\Delta\star\omega = \star\Delta\omega$
+\item $\Delta$ is self adjoint with respect to $(\cdot,\cdot)$, i.e. for $\omega,\eta \in \Omega^k(M)$, we have that
+$$(\Delta\omega, \eta ) = (\omega, \Delta\eta)$$
+\item A $k$-form $\omega$ is harmonic if and only if $d\omega = \delta\omega = 0$.
+\end{enumerate}
+\end{prop}
+\begin{proof}\enumbreak
+\begin{enumerate}
+\item We compute
+\begin{align*}
+\Delta\star\omega &= \delta d\star\omega + d\delta\star\omega \\
+&= (-1)^{n(k+2) + 1}\star d\star d\star \omega + (-1)^{n(n-k+1)+1}d\star d\star\star\omega \\
+&= (-1)^{n(k+2) + 1}\star d\star d\star \omega + (-1)^{n(n-k+1)+1}(-1)^{k(n-k)}d\star d\omega
+\end{align*}
+We then compute, using linearity of $\star$,
+\begin{align*}
+\star\Delta\omega &= \star \delta d\omega + \star d\delta\omega \\
+&= (-1)^{n(n-k)+1}\star\star d\star d\omega + (-1)^{n(k+1)+1} \star d\star d \star \omega \\
+&= (-1)^{n(n-k)+1}(-1)^{(n-k)k} d\star d\omega + (-1)^{n(k+1)+1} \star d\star d \star \omega
+\end{align*}
+We then compare signs, giving us equality.
+\item We compute
+\begin{align*}
+(\omega, \Delta\eta) &= (\omega, d\delta\eta + \delta d\eta) \\
+&= (\omega, d\delta\eta) + (\omega, \delta d\eta) \\
+&= (\delta\omega,\delta\eta) + (d\omega,d\eta)  \\
+&= (d\delta\omega,\eta) + (\delta d\omega,\eta) \\
+&= (d\delta\omega + \delta d\omega,\eta) \\
+&= (\Delta\omega,\eta)
+\end{align*}
+\item The backwards direction is clear. For the forwards direction, suppose $\Delta \omega = 0$. Then
+\begin{align*}
+&(\Delta\omega,\omega) = (0,\omega) = 0 \\
+\implies &(d\delta\omega + \delta d\omega,\omega) = 0 \\
+\implies &(d\delta\omega,\omega) + (\delta d\omega,\omega) = 0\\
+\implies &(\delta\omega,\delta\omega) + (d\omega,d\omega) = 0
+\end{align*}
+Since $(\cdot,\cdot)$ is positive definite, this implies that both $\delta\omega = 0$ and $d\omega = 0$.
+\end{enumerate}
+\end{proof}
 %
 \end{document}
