--- a/LaplacianTalk/laplacian.tex
+++ b/LaplacianTalk/laplacian.tex
@@ -326,7 +326,7 @@ Finally,  we have the necessary tools to define the fabled \ib{Laplace-de Rham O
 \begin{defn}
 On a oriented compact Riemannian manifold $(M,g)$, define the \ib{Laplace-de Rham Operator}, denoted $\Delta$, as  the family of maps $\Omega^k(M) \to \Omega^k(M)$ such that 
 $$\Delta = \delta d + d\delta $$
-A $k$-form $\omega$ satsifying $\Delta\omega = 0$ is called \ib{harmonic}.
+A $k$-form $\omega$ satsifying $\Delta\omega = 0$ is called \ib{harmonic}, and the space of harmonic $k$-forms is denoted $\mathcal{H}^k(M)$
 \end{defn}
 
 \begin{prop}
@@ -405,6 +405,34 @@ We then compare signs, giving us equality.
 \end{align*}
 Since $(\cdot,\cdot)$ is positive definite, this implies that both $\delta\omega = 0$ and $d\omega = 0$.
 \end{enumerate}
+\end{proof}
+While we don't have all the tools to do it, we state important applications of this operator
+\begin{thm}[\ib{The Hodge Decomposition}]
+The space $\Omega^k(M)$ decomposes as the orthogonal sum
+$$\Omega^k(M) = \im \Delta \oplus \mathcal{H}^k(M) $$
+\end{thm}
+The proof usually involves some heavy functional analysis. We note that all the trouble here is to prove that $\im \Delta \subset (\ker\Delta)^\perp$. Since $\Delta$ is self adjoint, we can easily see that it's image is contained in the orthogonal complement of $\ker \Delta$. Let $\Delta \omega \in \im \Delta$ and $\Delta \eta = 0$. Then
+$$(\Delta\omega, \eta) = (\omega,\Delta\eta) = 0 $$
+Therefore, $\im\Delta \subset (\ker\Delta)^\perp$. In general, the image of a linear map is always so contained in the orthogonal complement of the kernel of its adjoint. For finite dimensional vector spaces, this is actually equality, but the space of differential forms is infinite dimensional, so there is additional work to be done. In particular, we will need two big facts.
+\begin{enumerate}
+\item $\im \Delta = d\delta(\Omega^k(M)) \oplus \delta d(\Omega^k(M))$
+\item $\im \Delta = (\ker\Delta)^\perp = \mathcal{H}^k(M)^\perp$
+\end{enumerate} 
+\begin{cor}
+There is a canonical isomorphism $\mathcal{H}^k(M) \to H^k_{dR}(M)$
+\end{cor}
+\begin{proof}
+We have that $\Omega^k(M) = \im\Delta \oplus \mathcal{H}^k(M) = d\delta(\Omega^k(M)) \oplus \delta d(\Omega^k(M)) oplus \mathcal{H}^k(M)$ and that $\ker d = (\im \delta)^\perp = \mathcal{H}^k(X) \oplus d(\Omega^{k-1}(M))$ This gives us that $\ker d / d(\Omega^{k-1}(M)) \cong \mathcal{H}^k(M)$.
+\end{proof}
+Another theorem that we'll state without proof.
+\begin{thm}
+Every cohomology class of $H^k_{dR}(M)$ has a unique harmonic representative.
+\end{thm}
+\begin{cor}[\ib{Poincar\'e duality}]
+The pairing $\langle [\omega], [\eta]\rangle \mapsto \int_M \omega \wedge \eta$ is nondegnerate, giving an isomorphism $\mathcal{H}^k(M), (\mathcal{H}^{n-k}(M))^* \cong H_{n-k}(M, \R)$
+\end{cor}
+\begin{proof}
+Given a nonzero harmonic form $\omega \in \mathcal{H}^k(M)$, we have that $\Delta\star\omega = \star\Delta\omega = 0$. So $\star\omega$ is harmonic as well. Then $\int_M \omega\wedge\star\omega = \int_M|\omega|dV_g \neq 0$. Therefore, this pairing is nondegenerate, giving us a canonical isomorphism.
 \end{proof}
 %
 \end{document}
