fixed computation error

--- a/LaplacianTalk/laplacian.tex
+++ b/LaplacianTalk/laplacian.tex
@@ -356,7 +356,7 @@ d\star df &= (-1)^{i-1} \frac{\partial}{\partial x^k}\left( g^{ij}\sqrt{\det g}\
 We then have that $\star d\star df$ must satsify $d\star f \wedge \star d\star df = \langle d\star f, d\star f \rangle~dV_g$. We then compute
 \begin{align*}
 \biggl\langle \frac{1}{\sqrt{\det g}} \frac{\partial}{\partial x^i}\left( g^{ij}\sqrt{\det g}\frac{\partial f}{\partial x^j} \right) dV_g, \frac{1}{\sqrt{\det g}} \frac{\partial}{\partial x^k}\left( g^{k\ell}\sqrt{\det g}\frac{\partial f}{\partial x^\ell} \right)~dV_g\biggr\rangle~dV_g  \\
-= \frac{1}{\det g}\frac{1}{\sqrt{\det g}} \frac{\partial}{\partial x^i}\left( g^{ij}\sqrt{\det g}\frac{\partial f}{\partial x^j} \right)    \frac{1}{\sqrt{\det g}} \frac{\partial}{\partial x^k}\left( g^{k\ell}\sqrt{\det g}\frac{\partial f}{\partial x^k} \right) ~dV_g
+= \frac{1}{\sqrt{\det g}} \frac{\partial}{\partial x^i}\left( g^{ij}\sqrt{\det g}\frac{\partial f}{\partial x^j} \right)    \frac{1}{\sqrt{\det g}} \frac{\partial}{\partial x^k}\left( g^{k\ell}\sqrt{\det g}\frac{\partial f}{\partial x^k} \right) ~dV_g
 \end{align*}
 Where we use the fact that $\langle dV_g, dV_g \rangle = 1$. Therefore, we conclude that 
 $$\delta df = -\star d\star f = -\frac{1}{\sqrt{\det g}} \frac{\partial}{\partial x^i}\left( g^{ij}\sqrt{\det g}\frac{\partial f}{\partial x^j} \right) $$
