--- a/LaplacianTalk/laplacian.tex
+++ b/LaplacianTalk/laplacian.tex
@@ -415,21 +415,23 @@ The proof usually involves some heavy functional analysis. We note that all the 
 $$(\Delta\omega, \eta) = (\omega,\Delta\eta) = 0 $$
 Therefore, $\im\Delta \subset (\ker\Delta)^\perp$. In general, the image of a linear map is always contained in the orthogonal complement of the kernel of its adjoint. For finite dimensional vector spaces, this is actually equality, but the space of differential forms is infinite dimensional, so there is additional work to be done. In particular, we will need two big facts.
 \begin{enumerate}
-\item $\im \Delta = d\delta(\Omega^k(M)) \oplus \delta d(\Omega^k(M))$
+\item $\im \Delta = d\delta(\Omega^k(M)) \oplus \delta d(\Omega^k(M)) = d(\Omega^{k-1}(M)) \oplus \delta(\Omega^{k+1}(M))$
 \item $\im \Delta = (\ker\Delta)^\perp = \mathcal{H}^k(M)^\perp$
 \end{enumerate} 
 \begin{cor}
 There is a canonical isomorphism $\mathcal{H}^k(M) \to H^k_{dR}(M)$
 \end{cor}
 \begin{proof}
-We have that $\Omega^k(M) = \im\Delta \oplus \mathcal{H}^k(M) = d\delta(\Omega^k(M)) \oplus \delta d(\Omega^k(M)) \oplus \mathcal{H}^k(M)$ and that $\ker d = (\im \delta)^\perp = \mathcal{H}^k(X) \oplus d(\Omega^{k-1}(M))$ This gives us that $\ker d / d(\Omega^{k-1}(M)) \cong \mathcal{H}^k(M)$.
+We have that 
+$$\Omega^k(M) = \im\Delta \oplus \mathcal{H}^k(M) = d(\Omega^{k-1}(M)) \oplus \delta(\Omega^{k-1}(M)) \oplus \mathcal{H}^k(M)$$
+and that $\ker d = (\im \delta)^\perp = \mathcal{H}^k(X) \oplus d(\Omega^{k-1}(M))$ This gives us that $\ker d / d(\Omega^{k-1}(M)) \cong \mathcal{H}^k(M)$.
 \end{proof}
 Another theorem that we'll state without proof.
 \begin{thm}
 Every cohomology class of $H^k_{dR}(M)$ has a unique harmonic representative.
 \end{thm}
 \begin{cor}[\ib{Poincar\'e duality}]
-The pairing $\langle [\omega], [\eta]\rangle \mapsto \int_M \omega \wedge \eta$ is nondegnerate, giving an isomorphism $\mathcal{H}^k(M), (\mathcal{H}^{n-k}(M))^* \cong H_{n-k}(M, \R)$
+The pairing $\langle [\omega], [\eta]\rangle \mapsto \int_M \omega \wedge \star\eta$ is nondegenerate, giving an isomorphism $\mathcal{H}^k(M)\to(\mathcal{H}^{n-k}(M))^* \cong H_{n-k}(M, \R)$
 \end{cor}
 \begin{proof}
 Given a nonzero harmonic form $\omega \in \mathcal{H}^k(M)$, we have that $\Delta\star\omega = \star\Delta\omega = 0$. So $\star\omega$ is harmonic as well. Then $\int_M \omega\wedge\star\omega = \int_M|\omega|dV_g \neq 0$. Therefore, this pairing is nondegenerate, giving us a canonical isomorphism.
