--- a/KahlerTalk/khaler.tex
+++ b/KahlerTalk/khaler.tex
@@ -272,4 +272,79 @@ Given a vector space $V$ with complex structure $J$, given a $J$-compatible inne
 A vector space $V$ is \ib{K\"ahler} if it has compatible structures $J,g,\omega$.
 \end{defn}
 %
+One final way to obtain these compatible structures is to start with a Hermitian vector space $(V,h)$, and let $g(v,w) = \text{Re}~h(v,w)$ and $\omega(v,w) = - \text{Im}~h(v,w)$.
+%
+\setcounter{section}{1}
+%
+\section*{K\"ahler Manifolds}
+%
+With the linear algebra set up, we can move on to talking about the manifolds. We'll first translate the linear algebraic concepts to ones on a manifold.
+%
+\begin{defn}
+A \ib{Riemannian metric} on a smooth manifold $M$ is a smoothly symmetric positive definite $2$-tensor field $g: M \to \mathcal{T}^2(M)$.
+\end{defn}
+Smooth here mean one of several equivalent things:
+\begin{enumerate}
+\item The component functions of the matrix $g_{ij} = \langle \partial_i, \partial_j \rangle$ are smooth in any chart.
+\item $g$ is a smooth map from $M$ into the tensor bundle $\mathcal{T}^2(M)$.
+\item For any vector fields $X,Y \in \mathcal{X}(M)$, the function given by $g(X,Y)$ is smooth.
+\end{enumerate}
+We note that a Riemannian metric on a manifold is analogous to an inner product on a vector space -- it a smooth assignment of an inner product to each tangent space $T_pM$. Also, we have that $g_p$ being an inner product on $T_pM$ implies that it is nondegenerate, so $g$ induces an isomorphism $TM \to T^*M$.
+\begin{defn}
+A \ib{symplectic forn} on a smooth manifold $M$ is a smooth nondegenerate closed skew-symmetric $2$-form $\omega: M \to \Lambda^2(M)$.
+\end{defn}
+Here closed means that the exterior derivative $d\omega = 0$. A symplectic form makes every tangent space $T_pM$ a symplectic vector space.
+%
+\begin{exmp}
+GIven any manifold $M$, we can define a symplectic structure on its cotangent bundle $T^*M$ as follows. Define the \ib{tautological $1$-form} $\alpha \in \Omega^1(T^*M)$ by $\alpha_(p, \xi) = d\pi_p^*\xi$ where $\pi: T^*M \to M$ is the projection. Then the $2$-form $\omega = d\alpha$ is symplectic. If $(p^i)$ denote coordinates on $M$, and $(p^i,q^i)$ denote the induced coordinates given by the local trivialization for $T^*M$, we have that 
+$$\omega = \sum_i dq^i \wedge dp^i $$
+which looks exactly like the standard form!
+\end{exmp}
+%
+As it turns out, every symplectic manifold has the same local structure, what this means is that every symplectic manifold $(M,\omega)$ is locally symplectomorphic to $\R^{2n}$ (now thought of as a manifold, rather than a vector space). The same does not hold for Riemannian manifolds. It is not the case that every Riemannian manifold is locally isometric to $\R^n$ with the standard Euclidean metric. 
+
+Another difference is that every manifold admits a Riemannian metric. The same is not true in the symplectic case. 
+\begin{prop}
+The only sphere that admits a symplectic structure is $S^2$
+\end{prop}
+%
+\begin{proof}
+We can give $S^2$ a symplectic structure with a choice of volume form, which is closed and skew symmetric. Then let $n \in 2\Z$ with $n \neq 2$. We claim that there exists no symplectic structure on $S^n$. We know that $H^2_{dR}(M) = 0$, so every $2$-form is exact. This tells us that the $n/2$-fold wedge of $\omega$ with itself is also exact, so it is equal to $d\beta$ for some $\beta$. Then by Stokes' Theorem
+$$\int_{S^n} \omega^{n/2} = \int_{S^n} d\beta = 0 $$
+so $\omega^{n/2}$ is not a volume form.
+\end{proof}
+%
+\begin{defn}
+An \ib{almost complex structure} on a smooth manifold is smoothly varying $J$ where at each $p \in M$, $J_p^2: T_pM \to T_pM$ is equal to $\id_{T_pM}$
+\end{defn}
+Since the endomorphism is acting on a different vector space at each point, what does smooth mean? We have a canonical isomorphism $V^* \otimes V \to \End(V)$, so we identify $J$ as a smoothly varying $(1,1)$ tensor field, and ask that the map to the tensor bundle $J: M \to \mathcal{T}^1_1(M)$ is smooth.
+%
+\begin{defn}
+A \ib{complex manifold} is a smooth manifold with an atlas of charts $\varphi: U \to \C^n$ where the transition maps $\varphi \circ \psi\inv : \psi(U) \cap \varphi(V) \to \C^n$ are holomorphic.
+\end{defn}
+%
+As it turns out, an almost complex structure isn't quite enough for our needs -- it will need to satisfy some integrability condition. If you know about the Frobenius theorem regarding when vector fields determine a subbundle of the tangent bundle, this is the same concept.
+%
+\begin{defn}
+A \ib{K\"ahler manifold} is a complex manifold $M$ with a Riemannian metric $g$ and symplectic form $\omega$ such that at each $T_pM$, $g_p$ and $\omega_p$ are compatible with the complex structure given by multiplication by $i$, i.e.
+$$g_p(i\cdot v,w) = \omega(v,w) \qquad \omega_p(i\cdot v,w) = g(v,w) $$
+\end{defn}
+%
+We end with some examples
+\begin{prop}
+Complex projective space $\CP^n$ is K\"ahler.
+\end{prop}
+%
+\begin{proof}
+To see this, we note that the unitary group $U(n+1)$ acts transitively on $\CP^n$ thought of as lines in $\C^{n+1}$, and $\CP^n$ will be both homogeneous and isotropic under this action. Using this, we can define a $U(n+1)$ invariant metric on $\CP^n$, from which we can recover a hermitian form on $\CP^n$, which we can then use the construct the symplectic form. The explicit computations get quite nasty though.
+\end{proof}
+%
+\begin{prop}
+Any torus $T^{2n} = \C^n / \Lambda^n$ (where $\Lambda^n \cong \Z^{2n}$ is a lattice) is K\"ahler.
+\end{prop}
+%
+\begin{proof}
+The standard hermitian metric on $\C^n$ descends to a hermitian metric on $T^{2n}$. We can then use this to define the Riemannian metric and symplectic form.
+\end{proof}
+%
 \end{document}
